syntax = "proto3";
package pandas_pouch;

service PandasPouchCacheService {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Put (PutRequest) returns (PutResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bool found = 1;
  string value = 2;
}

message PutRequest {
  string key = 1;
  string value  = 2;
}

message PutResponse {
  bool success = 1;
}
